--- a/index1.html
+++ b/index1.html
@@ -48,41 +48,41 @@
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Select States</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="http://azurefunc1990099.azurewebsites.net/api/HttpExample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Functin">Arunachal Pradesh</a>
-    <a href="#">Andhra Pradesh</a>
-    <a href="#">Assam</a>
-	<a href="#">Bihar</a>
-	<a href="#">Chhattisgarh</a>
-	<a href="#">Goa</a>
-	<a href="#">Gujarat</a>
-	<a href="#">Haryana</a>
-	<a href="#">Himachal Pradesh</a>
-	<a href="#">Jammu & Kashmir</a>
-	<a href="#">Jharkhand</a>
-	<a href="#">Karnataka</a>
-	<a href="#">Kerala</a>
-	<a href="#">Madhya Pradesh</a>
-	<a href="#">Maharashtra</a>
-	<a href="#">Manipur</a>
-	<a href="#">Meghalaya</a>
-	<a href="#">Mizoram</a>
-	<a href="#">Nagaland</a>
-	<a href="#">Odisha</a>
-	<a href="#">Punjab</a>
-	<a href="#">Rajasthan</a>
-	<a href="#">Sikkim</a>
-	<a href="#">Tamil Nadu</a>
-	<a href="#">Telangana</a>
-	<a href="#">Tripura</a>
-	<a href="#">Uttar Pradesh</a>
-	<a href="#">Uttarakhand</a>
-	<a href="#">West Bengal</a>
-	<a href="#">Andaman and Nicobar Islands</a>
-	<a href="#">Chandigarh</a>
-	<a href="#">Dadra and Nagar Haveli</a>
-	<a href="#">Daman & Diu</a>
-	<a href="#">Lakshadweep</a>
-	<a href="#">Delhi</a>
+    <a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Arunachal Pradesh">Arunachal Pradesh</a>
+    <a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Andhra Pradesh">Andhra Pradesh</a>
+    <a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Assam">Assam</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Bihar">Bihar</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Chhattisgarh">Chhattisgarh</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Goa">Goa</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Gujarat">Gujarat</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Haryana">Haryana</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Himachal Pradesh">Himachal Pradesh</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Jammu Kashmir">Jammu & Kashmir</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Jharkhand">Jharkhand</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=katakana">Karnataka</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Kerala">Kerala</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Madhya Pradesh">Madhya Pradesh</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Maharashtra">Maharashtra</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Manipur">Manipur</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Meghalaya">Meghalaya</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Mizoram">Mizoram</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Nagaland">Nagaland</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Odisha">Odisha</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Punjab">Punjab</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Rajasthan">Rajasthan</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Sikkim">Sikkim</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Tamil Nadu">Tamil Nadu</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Telangana">Telangana</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Tripura">Tripura</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Uttar Pradesh">Uttar Pradesh</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Uttarakhand">Uttarakhand</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=West Bengal">West Bengal</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Andaman and Nicobar Islands">Andaman and Nicobar Islands</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Chandigarh">Chandigarh</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Dadra and Nagar Haveli">Dadra and Nagar Haveli</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Daman & Diu">Daman & Diu</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Lakshadweep">Lakshadweep</a>
+	<a href="https://azurefunc1990099.azurewebsites.net/api/httpexample?code=7PuLHJt0PfYqLQjgmjITjJtZrymCw/KqJnQfaXkGIqNte7ot5OwE9Q==&name=Delhi">Delhi</a>
 	</div>
 </div>
 <script>
